fix popup z-index

--- a/src/assets/design-material/style/helpers/pop-up.css
+++ b/src/assets/design-material/style/helpers/pop-up.css
@@ -1,6 +1,6 @@
 .pop-up-parent {
     position: fixed;
-    z-index: 11;
+    z-index: 12;
     top: 0;
     left: 0;
     height: 100vh;
